--- a/config.json
+++ b/config.json
@@ -1,5 +1,5 @@
 {
-	"ip":"mainryxGL.aternos.me:46698",
+	"ip":"kokopu.aternos.host:46698",
 	"port": "46698",
-	"name": "Jakubko <3"
+	"name": "kokotko"
 }
